k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-deployment
  labels:
    app: aceest
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: aceest
  template:
    metadata:
      labels:
        app: aceest
    spec:
      containers:
      - name: aceest-app
        image: yourusername/aceestfitnessgym:1.0.0
        ports:
        - containerPort: 5000
