k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-svc
  labels:
    app: aceest
spec:
  type: NodePort          # For Minikube; use LoadBalancer in cloud
  selector:
    app: aceest
  ports:
    - protocol: TCP
      port: 5000          # Port inside the cluster
      targetPort: 5000    # Pod container port
      nodePort: 30080     # Port exposed on host/VM
